<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_ros_perceptor_bringup</name>
  <version>3.2.4</version>
  <description>
    Launch files to use isaac perceptor with the Nova sensor suite.
  </description>

  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>

  <license>
    Copyright (c) 2024, NVIDIA CORPORATION. All rights reserved.
    NVIDIA CORPORATION and its licensors retain all intellectual property
    and proprietary rights in and to this software, related documentation
    and any modifications thereto.  Any use, reproduction, disclosure or
    distribution of this software and related documentation without an express
    license agreement from NVIDIA CORPORATION is strictly prohibited.
  </license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>isaac_ros_common</build_depend>

  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>isaac_common_py</exec_depend>
  <exec_depend>isaac_mapping_ros</exec_depend>
  <exec_depend>isaac_ros_correlated_timestamp_driver</exec_depend>
  <exec_depend>isaac_ros_data_replayer</exec_depend>
  <exec_depend>isaac_ros_ess</exec_depend>
  <exec_depend>isaac_ros_hawk</exec_depend>
  <exec_depend>isaac_ros_hesai</exec_depend>
  <exec_depend>isaac_ros_image_proc</exec_depend>
  <exec_depend>isaac_ros_imu_bmi088</exec_depend>
  <exec_depend>isaac_ros_launch_utils</exec_depend>
  <exec_depend>isaac_ros_occupancy_grid_localizer</exec_depend>
  <exec_depend>isaac_ros_owl</exec_depend>
  <exec_depend>isaac_ros_peoplenet_models_install</exec_depend>
  <exec_depend>isaac_ros_peoplesemseg_models_install</exec_depend>
  <exec_depend>isaac_ros_perceptor_python_utils</exec_depend>
  <exec_depend>isaac_ros_pointcloud_utils</exec_depend>
  <exec_depend>isaac_ros_rosbag_utils</exec_depend>
  <exec_depend>isaac_ros_stereo_image_proc</exec_depend>
  <exec_depend>isaac_ros_visual_global_localization</exec_depend>
  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>joy_linux</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nvblox_examples_bringup</exec_depend>
  <exec_depend>nvblox_ros</exec_depend>
  <exec_depend>nvblox_ros_python_utils</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>sllidar_ros2</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
